@@ -1,3 +1,12 @@
+2009-01-07  Hans-Peter Nilsson  <hp@axis.com>
+
+	* elf32-cris.c (cris_elf_relocate_section) <case R_CRIS_32_GD>
+	<case R_CRIS_16_GOT_GD, R_CRIS_32_GOT_GD>: For a symbol defined in
+	the program, the known offset starts at the negative size of the
+	TLS section.
+	<case R_CRIS_32_IE, R_CRIS_32_GOT_TPREL, R_CRIS_16_GOT_TPREL>:
+	Similar.
+
 2009-01-05  Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* config.bfd: Add lm32-*-rtems*.
